fixed moving main logo on mobile onload, dropline gif image, main animation only onload first time

--- a/src/blocks/modules/modal-about/about.scss
+++ b/src/blocks/modules/modal-about/about.scss
@@ -37,9 +37,9 @@
             transition: 1.5s .2s;
         }
         .contact__button, .contact__phone {
-            padding-top: 0;
+            transform: translateY(0);
             opacity: 1;
-            transition: 1.5s;
+            transition: 1.8s;
         }
         .modal__team_title, .modal__team_hr {
             padding-top: 0; 
